[package]
name = "ima-measurements"
version = "0.1.0"
authors = ["Patrick Uiterwijk <patrick@puiterwijk.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ima-measurement-dump"
path = "tool.rs"

[dependencies]
hex = { version = "0.4.3", features = ["serde"] }
fallible-iterator = "0.2.0"
thiserror = "1.0"
byteorder = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
tpmless-tpm2 = { version = "0.3.1", features = ["serialize"] }
